Change aplication height on laptop screen

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body{
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 20rem;
-  color:var(--kolor-niebieski-ciemny);
+  color: var(--kolor-niebieski-ciemny);
   animation-name: appear;
   animation-duration: 5s;
 }
@@ -243,6 +243,13 @@ body{
   padding: .5rem;
   border-radius: .5rem;
   margin-left: .5rem;
+}
+
+@media (min-width: 1200px) and (max-height: 800px){
+  .container,
+  .container-config{
+    height: 900px;
+  }
 }
 
 @media (max-width:767px){
